--- a/.github/workflows/ci-fenics.yml
+++ b/.github/workflows/ci-fenics.yml
@@ -80,6 +80,7 @@ jobs:
       - name: Run Julia tests
         shell: bash -l {0}
         run: |
+          conda activate fenicsproject
           julia --color=yes --check-bounds=yes --project='@.' -e 'using Pkg; Pkg.test(coverage=true)'
 
       - uses: julia-actions/julia-processcoverage@v1
