Trying to fix lib/julia/libstdc++.so.6: GLIBCXX_3.4.26 not found

--- a/.github/workflows/ci-fenics.yml
+++ b/.github/workflows/ci-fenics.yml
@@ -33,6 +33,7 @@ jobs:
           conda config --add channels conda-forge
           conda create -n fenicsproject -c conda-forge fenics
           conda activate fenicsproject
+          conda install libgcc gmp
           which python
           python -c "from dolfin import *"
           python -c "from fenics import *"
