--- a/Project.toml
+++ b/Project.toml
@@ -4,7 +4,5 @@ authors = ["Ivan Yashchuk <ivan.yashchuk@aalto.fi>"]
 version = "0.1.0"
 
 [deps]
-FiniteDifferences = "26cc04aa-876d-5657-8c51-4c34ba976000"
+ChainRulesCore = "d360d2e6-b24c-11e9-a2a3-2a2ae2dbcce4"
 PyCall = "438e738f-606a-5dbb-bf0a-cddfbfd45ab0"
-Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
-Zygote = "e88e6eb3-aa80-5325-afca-941959d7151f"
